fix dark mode fonts

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -72,10 +72,10 @@
   --translate-center: transform: {translate(-50%, -50%)};
 }
 
-@media (prefers-color-scheme: light) {
+@media (prefers-color-scheme: dark) {
   :root {
-    --background: var(--color-neutral-0);
-    --foreground: var(--color-neutral-900);
+    --background: var(--color-neutral-900);
+    --foreground: var(--color-neutral-0);
   }
 }
 
